2010-03-25  Daniel Helgason  <dhelgason@shaw.ca>

	* cdl/io_flash.cdl: Fix "requires" constraint on
	CYGNUM_IO_FLASH_BLOCK_OFFSET_n to allow positioning of block
	device at offset 0 in flash when using static configuration via
	offset.  Fix display string for CYGSEM_IO_FLASH_LEGACY_API option.

2010-01-17  John Dallaway  <john@dallaway.org.uk>

	* src/flashiodevlegacy.c: Specify flash block device lengths correctly
	when using static configuration via absolute addresses. Issue reported
	by Daniel Helgason.
	* cdl/io_flash.cdl: Fix display strings for
	CYGNUM_IO_FLASH_BLOCK_ABSOLUTE_START_[12].

2009-03-02  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* doc/flash.sgml: Fixed typos in a FLASH API listing.

2009-02-20  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/flash.h: Reinstate printf arg to cyg_flash_init, but it
	will now be officially required to be set to NULL.
	* src/flash.c (cyg_flash_init): Act on printf arg again (even though
	it's not meant to be non-NULL).
	* src/flashiodev.c (flashiodev_init): Call cyg_flash_init with NULL.
	* src/flashiodevlegacy.c (flashiodev_init): Ditto.
	* src/legacy_api.c (flash_init): Ditto.
	* doc/flash.sgml: Update cyg_flash_init as above, deprecating use of
	non-NULL parameter.

2009-02-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/flash.h: Modest API change: cyg_flash_init() no longer
	takes a printf function argument. Instead two new API functions
	are available: cyg_flash_set_printf() and
	cyg_flash_set_global_printf().
	
	* src/flash.c (CHATTER): Don't attempt output if printf function
	is NULL.
	(cyg_flash_init): No longer takes printf arg.
	(cyg_flash_set_printf): New. Set per-device printf function, locking
	if needed.
	(cyg_flash_set_global_printf): New. Set printf function for all
	devices, locking if needed.
	
	* src/flashiodev.c (flashiodev_init): cyg_flash_init no longer takes
	printf arg, and we can leave global printf at default.
	* src/flashiodevlegacy.c (flashiodev_init): Ditto.
