@@ -1,3 +1,9 @@
+2010-05-15  Christophe Coutand <ccoutand@stmi.com>
+
+	* src/flashiodev.c (flashiodev_lookup): Fix wrong code execution if
+	CYGFUN_IO_FLASH_BLOCK_FROM_FIS is enabled and
+	CYGFUN_IO_FLASH_BLOCK_FROM_DEVOFFSET is disabled.
+
 2010-03-25  Daniel Helgason  <dhelgason@shaw.ca>
 
 	* cdl/io_flash.cdl: Fix "requires" constraint on
